--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>NICKY25</title>
+<title>NICKY25 — Final</title>
 
-<!-- preload important assets -->
+<!-- Preload important assets -->
 <link rel="preload" href="assets/KaiseHua.mp3" as="audio">
 <link rel="preload" href="assets/intro.jpeg" as="image">
 <link rel="preload" href="assets/ima1.jpeg" as="image">
@@ -24,80 +24,58 @@
 }
 *{box-sizing:border-box}
 html,body{
-  height:100%; width:100%; margin:0; background:var(--bg);
-  font-family:Poppins,system-ui,Arial; overflow:hidden; -webkit-tap-highlight-color:transparent;
+  height:100%;width:100%;margin:0;background:var(--bg);
+  font-family:Poppins,system-ui,Arial;overflow:hidden;-webkit-tap-highlight-color:transparent;
 }
 
-/* base screens */
+/* base */
 .screen{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;flex-direction:column;opacity:0;pointer-events:none;transition:opacity .45s ease}
 .screen.active{opacity:1;pointer-events:auto}
 .bg{position:absolute;inset:0;background-size:cover;background-position:center;filter:brightness(.92);z-index:0}
 .wrap{position:relative;z-index:6;width:92%;max-width:960px;margin:0 auto;text-align:center;color:var(--white)}
 
-/* Screen 1 */
+/* intro */
 #screen1 .wrap{padding-top:12vh}
 .title1{font-size:clamp(20px,6vw,36px);font-weight:900;text-shadow:0 10px 30px rgba(0,20,40,0.7)}
 .subtitle1{font-size:clamp(12px,3.4vw,18px);opacity:.95;margin-top:.4rem}
 .tap-btn{margin-top:1.2rem;padding:.9rem 2.6rem;border-radius:28px;border:0;background:linear-gradient(180deg,rgba(255,255,255,0.08),rgba(255,255,255,0.03));backdrop-filter:blur(6px);box-shadow:0 12px 40px rgba(10,30,60,0.3);color:var(--white);font-weight:800;cursor:pointer;outline:none}
 
-/* panels (screen2 & screen4) */
+/* panels */
 .panel-container{width:92%;height:86%;display:flex;flex-direction:column;gap:18px;padding:3vh 0;justify-content:space-between;z-index:5}
 .panel{height:30%;min-height:100px;border-radius:14px;overflow:visible;position:relative;cursor:pointer;perspective:1400px}
-.panel-inner{
-  position:relative;width:100%;height:100%;
-  transform-style:preserve-3d;
-  -webkit-transform-style:preserve-3d;
-  transition:transform .68s cubic-bezier(.2,.9,.28,1);
-  -webkit-transition:-webkit-transform .68s cubic-bezier(.2,.9,.28,1);
-  border-radius:12px;overflow:hidden;
-  will-change:transform;
-  transform-origin:center center;
-  backface-visibility:visible;
-}
+.panel-inner{position:relative;width:100%;height:100%;transform-style:preserve-3d;transition:transform .6s cubic-bezier(.2,.9,.28,1);border-radius:12px;overflow:hidden;box-shadow:0 16px 50px rgba(0,20,40,0.35)}
+.panel.flipped .panel-inner{transform:rotateY(180deg)}
 
-/* flip */
-.panel.flipped .panel-inner{transform:rotateY(180deg);-webkit-transform:rotateY(180deg);}
-
-/* faces */
-.face{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;overflow:hidden}
-.front{
-  z-index:2;
-  -webkit-backface-visibility:hidden;
-  backface-visibility:hidden;
-  transform:rotateY(0deg);
-}
+.face{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;overflow:hidden;backface-visibility:hidden;-webkit-backface-visibility:hidden}
+.front{z-index:2;transform:rotateY(0deg)}
 .front img{width:100%;height:100%;object-fit:cover;display:block}
-.front .overlay-title{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:4;pointer-events:none}
+.front .overlay-title{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3;background:transparent;pointer-events:none}
 
-/* back face */
-.back{
-  transform:rotateY(180deg);
-  -webkit-transform:rotateY(180deg);
-  -webkit-backface-visibility:hidden;
-  backface-visibility:hidden;
-  display:flex;align-items:center;justify-content:center;padding:18px;text-align:center;background:rgba(0,0,0,0.18)
-}
+/* back */
+.back{transform:rotateY(180deg);display:flex;align-items:center;justify-content:center;padding:18px;text-align:center;background:rgba(0,0,0,0.18);backface-visibility:hidden;-webkit-backface-visibility:hidden}
 .back .blur-image{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;filter:blur(8px) brightness(.85);transform:scale(1.02);z-index:1}
-.back .panel-text{position:relative;z-index:3;font-size:clamp(12px,3vw,18px);line-height:1.5;color:white;text-shadow:0 6px 18px rgba(0,0,0,0.6)}
+.back .panel-text{position:relative;z-index:3;font-size:clamp(12px,3vw,18px);line-height:1.45;text-shadow:0 6px 18px rgba(0,0,0,0.6);color:white}
 
-/* ensure back sits above front when flipped */
+/* when flipped ensure back sits on top */
 .panel.flipped .front{z-index:0}
 .panel.flipped .back{z-index:2}
 
-/* letter page */
+/* letter */
 .letter-wrap{width:92%;max-width:920px;background:rgba(255,255,255,0.06);backdrop-filter:blur(6px);border-radius:14px;padding:26px;color:#fff;box-shadow:0 20px 60px rgba(0,20,40,0.5);z-index:5}
 .letter-title{font-size:clamp(22px,5vw,36px);font-weight:900;margin-bottom:12px}
 .letter-text{font-size:clamp(14px,3.4vw,18px);line-height:1.6;white-space:pre-wrap;text-align:left}
 .letter-overlay{position:absolute;inset:0;cursor:pointer;z-index:7}
 
-/* slide & final lines */
+/* final slideshow */
 #slides-wrap{position:absolute;inset:0;z-index:0;overflow:hidden}
 .slide{position:absolute;inset:0;background-size:cover;background-position:center;filter:blur(8px) brightness(.82);opacity:0;transition:opacity 1s ease}
 .slide.show{opacity:1}
 .final-line{color:#fff;font-weight:800;font-size:clamp(18px,4vw,30px);opacity:0;transform:translateY(10px);transition:opacity .9s,transform .9s;margin:14px 0}
 
-/* fallback play button (only shows if autoplay blocked) */
-#playFallback{position:fixed;right:18px;bottom:18px;z-index:9999;padding:.6rem 1rem;border-radius:8px;background:#fff;color:#031226;font-weight:700;border:none;display:none;box-shadow:0 8px 30px rgba(0,0,0,0.35);cursor:pointer}
+/* small visible fallback play button if audio blocked */
+#playFallback{
+  position:fixed;right:18px;bottom:18px;z-index:9999;padding:.6rem 1rem;border-radius:8px;background:#fff;color:#031226;font-weight:700;border:none;display:none;box-shadow:0 8px 30px rgba(0,0,0,0.35);
+}
 
 /* responsive */
 @media(max-width:420px){ .panel{height:28vh} .letter-text{text-align:center} }
@@ -105,7 +83,7 @@ html,body{
 </head>
 <body>
 
-<!-- AUDIO -->
+<!-- Audio -->
 <audio id="bgm" src="assets/KaiseHua.mp3" preload="auto" autoplay muted loop></audio>
 <button id="playFallback" aria-hidden="true">Play music</button>
 
@@ -123,7 +101,7 @@ html,body{
 <section id="screen2" class="screen" aria-hidden="true">
   <div class="bg" style="background-image:url('assets/SCREEN3.jpeg')"></div>
   <div class="panel-container">
-    <!-- panel 1 -->
+    <!-- Panel 1 -->
     <div class="panel" id="p2-1" role="button" tabindex="0">
       <div class="panel-inner">
         <div class="face front">
@@ -141,7 +119,7 @@ html,body{
       </div>
     </div>
 
-    <!-- panel 2 -->
+    <!-- Panel 2 -->
     <div class="panel" id="p2-2" role="button" tabindex="0">
       <div class="panel-inner">
         <div class="face front">
@@ -149,12 +127,15 @@ html,body{
         </div>
         <div class="face back">
           <img class="blur-image" src="assets/ima2.jpeg" alt="ima2 blur" decoding="async">
-          <div class="panel-text">Your smile, your heart, your softness…<br>I fall for them a little more every day.</div>
+          <div class="panel-text">
+            Your smile, your heart, your softness…<br>
+            I fall for them a little more every day.
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- panel 3 -->
+    <!-- Panel 3 -->
     <div class="panel" id="p2-3" role="button" tabindex="0">
       <div class="panel-inner">
         <div class="face front">
@@ -162,14 +143,18 @@ html,body{
         </div>
         <div class="face back">
           <img class="blur-image" src="assets/ima3.jpeg" alt="ima3 blur" decoding="async">
-          <div class="panel-text">No matter where life takes us,<br>my feelings for you will always stay the same—<br>pure, patient, gentle, and true.</div>
+          <div class="panel-text">
+            No matter where life takes us,<br>
+            my feelings for you will always stay the same—<br>
+            pure, patient, gentle, and true.
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<!-- SCREEN 3 (letter) -->
+<!-- SCREEN 3 -->
 <section id="screen3" class="screen" aria-hidden="true">
   <div class="bg" style="background-image:url('assets/ima3.jpeg')"></div>
   <div class="wrap letter-wrap" role="article">
@@ -190,7 +175,7 @@ it all comes from a place that is real inside me.
   <div class="letter-overlay" onclick="showScreen('screen4')"></div>
 </section>
 
-<!-- SCREEN 4 (3 panels with front titles + back blur/text) -->
+<!-- SCREEN 4 -->
 <section id="screen4" class="screen" aria-hidden="true">
   <div class="bg" style="background-image:url('assets/SCREEN5.jpeg')"></div>
   <div class="panel-container">
@@ -199,7 +184,9 @@ it all comes from a place that is real inside me.
       <div class="panel-inner">
         <div class="face front">
           <img src="assets/ONE.jpeg" alt="one front" decoding="async">
-          <div class="overlay-title">WHY I LOVE YOU</div>
+          <div class="overlay-title" style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3;pointer-events:none">
+            WHY I LOVE YOU
+          </div>
         </div>
         <div class="face back">
           <img class="blur-image" src="assets/ONE.jpeg" alt="one blur" decoding="async">
@@ -207,12 +194,15 @@ it all comes from a place that is real inside me.
         </div>
       </div>
     </div>
+
     <!-- 4-2 -->
     <div class="panel" id="p4-2" role="button" tabindex="0">
       <div class="panel-inner">
         <div class="face front">
           <img src="assets/TWO.jpeg" alt="two front" decoding="async">
-          <div class="overlay-title">MY PROMISES TO YOU</div>
+          <div class="overlay-title" style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3;pointer-events:none">
+            MY PROMISES TO YOU
+          </div>
         </div>
         <div class="face back">
           <img class="blur-image" src="assets/TWO.jpeg" alt="two blur" decoding="async">
@@ -220,16 +210,23 @@ it all comes from a place that is real inside me.
         </div>
       </div>
     </div>
+
     <!-- 4-3 -->
     <div class="panel" id="p4-3" role="button" tabindex="0">
       <div class="panel-inner">
         <div class="face front">
           <img src="assets/THREE.jpeg" alt="three front" decoding="async">
-          <div class="overlay-title">THE FUTURE I WANT WITH YOU</div>
+          <div class="overlay-title" style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3;pointer-events:none">
+            THE FUTURE I WANT WITH YOU
+          </div>
         </div>
         <div class="face back">
           <img class="blur-image" src="assets/THREE.jpeg" alt="three blur" decoding="async">
-          <div class="panel-text">We get married with our parents' permission and work hard.<br>We have our own house.<br>Every morning we wake up beside each other.</div>
+          <div class="panel-text">
+            We get married with our parents' permission and work hard.<br>
+            We have our own house.<br>
+            Every morning we wake up beside each other.
+          </div>
         </div>
       </div>
     </div>
@@ -260,7 +257,7 @@ it all comes from a place that is real inside me.
 </section>
 
 <script>
-/* helper: show screen */
+/* ---------------- show screens ---------------- */
 function showScreen(id){
   document.querySelectorAll('.screen').forEach(s=>{
     s.classList.remove('active');
@@ -270,10 +267,11 @@ function showScreen(id){
   if(!el) return;
   el.classList.add('active');
   el.removeAttribute('aria-hidden');
-  if(id === 'screen5'){ setTimeout(startFinalLoop, 350); }
+
+  if(id === 'screen5'){ setTimeout(()=> startFinalLoop(), 350); }
 }
 
-/* robust audio unlock */
+/* ---------------- audio unlock + fallback ---------------- */
 const bgm = document.getElementById('bgm');
 bgm.volume = 1;
 const openBtn = document.getElementById('openBtn');
@@ -287,6 +285,7 @@ async function tryPlayAudio(){
     playFallback.setAttribute('aria-hidden','true');
     return true;
   }catch(e){
+    // show manual fallback button
     playFallback.style.display = 'block';
     playFallback.setAttribute('aria-hidden','false');
     return false;
@@ -298,40 +297,71 @@ openBtn.addEventListener('click', async ()=>{
   showScreen('screen2');
 });
 
-playFallback.addEventListener('click', async ()=>{ await tryPlayAudio(); });
+playFallback.addEventListener('click', async ()=>{
+  await tryPlayAudio();
+});
 
+/* attempt unlock on first user gesture (safety) */
 ['click','touchstart','keydown','scroll'].forEach(ev=>{
   const handler = async function(){ await tryPlayAudio(); document.removeEventListener(ev, handler); };
   document.addEventListener(ev, handler, {passive:true});
 });
 
-/* panel flip logic: flip the whole panel element (.flipped), CSS rotates .panel-inner */
-function setupFlip(ids, nextScreen){
-  const panels = ids.map(id => document.getElementById(id));
+/* ---------------- panel flip logic (whole panel flips) ----------------
+   Behavior:
+    - click panel -> class "flipped" added to panel
+    - CSS rotates .panel-inner and shows back face
+    - after flip animation finishes we hide the front face element to prevent "ghost/backwards text"
+      (this avoids the front overlay appearing through)
+*/
+function setupFlip(panelIds, nextScreen){
+  const panels = panelIds.map(id => document.getElementById(id));
   const flipped = panels.map(()=>false);
+
   panels.forEach((panel, idx)=>{
     if(!panel) return;
-    const activate = (ev)=>{
+
+    const activate = (ev) => {
       if(panel.classList.contains('flipped')) return;
+      // ensure back content already rendered (should be)
       panel.classList.add('flipped');
       flipped[idx] = true;
-      // try to start audio on user interaction
+
+      // try audio again (safe)
       tryPlayAudio().catch(()=>{});
+
+      // hide the front content after half the duration so 3D rotation finished visually
+      setTimeout(()=>{
+        const front = panel.querySelector('.front');
+        if(front) front.style.visibility = 'hidden';
+      }, 320); // slightly more than half of .6s animation
+
+      // ensure back elements are visible (in case)
+      const back = panel.querySelector('.back');
+      if(back){
+        back.style.visibility = 'visible';
+      }
+
+      // when all flipped -> wait 5s then go to next screen
       if(flipped.every(Boolean)){
         setTimeout(()=> showScreen(nextScreen), 5000);
       }
     };
+
     panel.addEventListener('click', activate, {passive:true});
-    panel.addEventListener('keydown', (e)=>{ if(e.key==='Enter' || e.key===' ') { e.preventDefault(); activate(); }});
+    panel.addEventListener('keydown', (e)=>{ if(e.key==='Enter' || e.key===' ') { e.preventDefault(); activate(); } });
+
+    // if user somehow clicks directly the back, stop propagation (keeps behaviour stable)
     const back = panel.querySelector('.back');
-    if(back) back.addEventListener('click', e=> e.stopPropagation(), {passive:true});
+    if(back) back.addEventListener('click', (e)=>{ e.stopPropagation(); }, {passive:true});
   });
 }
 
+/* initialize both screens */
 setupFlip(['p2-1','p2-2','p2-3'],'screen3');
 setupFlip(['p4-1','p4-2','p4-3'],'screen5');
 
-/* screen5 slideshow + looping lines */
+/* ---------------- screen5 slideshow + looping lines ---------------- */
 let slideTimer = null;
 function startSlides(){
   const slides = Array.from(document.querySelectorAll('.slide'));
@@ -352,12 +382,12 @@ function startFinalLoop(){
   if(finalLoopRunning) return;
   finalLoopRunning = true;
   const ids = ['line1','line2','line3','line4','line5'];
-  const lines = ids.map(id => document.getElementById(id));
+  const lines = ids.map(id=>document.getElementById(id));
   lines.forEach(el=>{ if(el){ el.style.opacity=0; el.style.transform='translateY(10px)'; }});
   startSlides();
   (function runCycle(){
     let delay = 400;
-    lines.forEach(el=>{
+    lines.forEach((el)=>{
       if(!el) return;
       setTimeout(()=>{ el.style.transition='opacity 900ms ease, transform 900ms ease'; el.style.opacity=1; el.style.transform='translateY(0)'; }, delay);
       delay += 1800;
@@ -372,16 +402,22 @@ function startFinalLoop(){
   })();
 }
 
-/* startup */
+/* -------------- init -------------- */
 window.addEventListener('load', ()=>{
+  // start intro
   showScreen('screen1');
-  // remove accidental flipped state
+
+  // ensure no leftover flipped/front hidden states from earlier copies
   ['p2-1','p2-2','p2-3','p4-1','p4-2','p4-3'].forEach(id=>{
     const el = document.getElementById(id);
-    if(el) el.classList.remove('flipped');
+    if(!el) return;
+    el.classList.remove('flipped');
+    const front = el.querySelector('.front');
+    if(front) front.style.visibility = 'visible';
   });
-  // attempt silent unlock once
-  tryPlayAudio().catch(()=>{});
+
+  // try audio silently once
+  tryPlayAudio().then(()=>{/*noop*/});
 });
 </script>
 </body>
